Continue Player Highlight on Change Instrument

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -5,13 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
-      name="description"
-      content="Web site created using create-react-app"
+      name="Noodler"
+      content="The Free DAW For Learning Guitar"
     />
     <link rel="icon" href="https://www.flaticon.com/free-icons/noodles" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>NOODLER</title>
-    <link rel="shortcut icon" type="image/jpg" href="Notes.svg"/>
+    <link rel="shortcut icon" type="image/jpg" href="NoodlerLogo.png"/>
   </head>
   <body>
     <script type="module" src="script.js"></script>
